fix DT-2342, V8 - Architect - Folder page text alignment.

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -387,7 +387,7 @@
         .navigation-list--children {
             .navigation-item:first-child .item-name,
             .navigation-item:last-child .item-name,
-            .navigation-item {
+            .navigation-item .item-name {
                 padding: 7px 14px;
             }
         }
